<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="square">√</string>
    <string name="expo">^</string>
    <string name="remainder">%</string>
    <string name="defvalue">0.0</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="clear">C</string>
    <string name="coma">.</string>
    <string name="posneg">+/-</string>
    <string name="err">Error, can`t get square root from negative value</string>
</resources>